--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="row">
                 <div class="span3">
-                    <div id="sidebar">
+                    <div id="sidebar" class="hide">
                         <ul id="section-tabs" class="nav nav-pills nav-stacked">
                         </ul>
                         <ul id="links" class="nav nav-pills nav-stacked">
