--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </ul>
                         <ul id="links" class="nav nav-pills nav-stacked">
                             <li class="nav-header">Links</li>
-                            <li><a id="pdf-download" href="//goldenripe.org/theway/pdf/The-Way-en.pdf">Download PDF</a></li>
+                            <li><a id="pdf-download" href="/theway/content/en/The-Way-en.pdf">Download PDF</a></li>
                             <li><a href="//goldenripe.org/theway/ask">Ask a question</a></li>
                             <li><a href="//goldenripe.org/theway/respond">Learn more</a></li>
                         </ul>
