Plain HTML version for low tech support

--- a/dynamic.html
+++ b/dynamic.html
@@ -64,6 +64,7 @@
             <hr>
 
             <footer>
+                <p>Page not loading? Try switching to the <a href="/theway/?js=false">HTML version</a>.</p>
                 <p>&copy; 2013 GoldenRipe. Web app developed by <a href="//back3nd.com">Eric Cecchi</a>. Content by <a href="//goldenripe.org">GoldenRipe</a>.</p>
             </footer>
 
