--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>The Way, by GoldenRipe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        
+
         <script type="text/javascript" src="//use.typekit.net/zev4xjf.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
@@ -25,9 +25,7 @@
         <![endif]-->
 
         <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
-
-        <div class="container">
-            <div class="navbar">
+            <div class="navbar navbar-inverse navbar-fixed-top">
                 <div class="navbar-inner">
                     <div class="container">
                         <a class="brand" href="#">The Way</a>
@@ -43,6 +41,7 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
             <div class="row">
                 <div class="span3">
                     <div id="sidebar" class="hide">
@@ -64,8 +63,7 @@
             <hr>
 
             <footer>
-                <p>Page not loading? Try switching to the <a href="/theway/?js=false">HTML version</a>.</p>
-                <p>&copy; 2013 GoldenRipe. Web app developed by <a href="//back3nd.com">Eric Cecchi</a>. Content by <a href="//goldenripe.org">GoldenRipe</a>.</p>
+                <p>&copy; 2013 GoldenRipe. Mobile app developed by <a href="//back3nd.com">Eric Cecchi</a>. Content by <a href="//goldenripe.org">GoldenRipe</a>.</p>
             </footer>
 
         </div> <!-- /container -->
