Fixed broken links (again).

--- a/dynamic.html
+++ b/dynamic.html
@@ -9,7 +9,7 @@
         <title>The Way, by GoldenRipe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        
+
         <script type="text/javascript" src="//use.typekit.net/zev4xjf.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
@@ -51,8 +51,8 @@
                         <ul id="links" class="nav nav-pills nav-stacked">
                             <li class="nav-header">Links</li>
                             <li><a id="pdf-download" href="/theway/content/en/The-Way-en.pdf">Download PDF</a></li>
-                            <li><a href="//goldenripe.org/theway/ask">Ask a question</a></li>
-                            <li><a href="//goldenripe.org/theway/respond">Learn more</a></li>
+                            <li><a href="//goldenripe.org/app/ask">Ask a question</a></li>
+                            <li><a href="//goldenripe.org/app/respond">Learn more</a></li>
                         </ul>
                     </div>
                     <br>
