--- a/dynamic.html
+++ b/dynamic.html
@@ -46,6 +46,9 @@
             <div class="row">
                 <div class="span3">
                     <div id="sidebar" class="hide">
+                        <ul id="home-menu" class="nav nav-pills nav-stacked">
+                          <li><a href="#section-index" data-section="index">Home</a></li>
+                        </ul>
                         <ul id="section-tabs" class="nav nav-pills nav-stacked">
                         </ul>
                         <ul id="links" class="nav nav-pills nav-stacked">
