Fix broken URLs

--- a/dynamic.html
+++ b/dynamic.html
@@ -13,9 +13,9 @@
         <script type="text/javascript" src="//use.typekit.net/zev4xjf.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="/css/main.css">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -53,7 +53,7 @@
                         </ul>
                         <ul id="links" class="nav nav-pills nav-stacked">
                             <li class="nav-header">Links</li>
-                            <li><a id="pdf-download" href="/theway/content/en/The-Way-en.pdf">Download PDF</a></li>
+                            <li><a id="pdf-download" href="/content/en/The-Way-en.pdf">Download PDF</a></li>
                             <li><a href="//goldenripe.org/app/ask">Ask a question</a></li>
                             <li><a href="//goldenripe.org/app/respond">Learn more</a></li>
                         </ul>
@@ -67,7 +67,7 @@
             <hr>
 
             <footer>
-                <p>Page not loading? Try switching to the <a href="/theway/?js=false">HTML version</a>.</p>
+                <p>Page not loading? Try switching to the <a href="/?js=false">HTML version</a>.</p>
                 <p>&copy; 2013 GoldenRipe. Web app developed by <a href="//back3nd.com">Eric Cecchi</a>. Content by <a href="//goldenripe.org">GoldenRipe</a>.</p>
             </footer>
 
@@ -79,10 +79,10 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/vendor/spin.min.js"></script>
-        <script src="js/vendor/jquery.spin.js"></script>
-        <script src="js/main.js"></script>
+        <script src="/js/vendor/bootstrap.min.js"></script>
+        <script src="/js/vendor/spin.min.js"></script>
+        <script src="/js/vendor/jquery.spin.js"></script>
+        <script src="/js/main.js"></script>
 
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
